Change to build from 11ty

--- a/the-impossible-safe/privacy.html
+++ b/the-impossible-safe/privacy.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>The Impossible Safe - Privacy Policy</title>
-    <meta name="author" content="Edvin Lindén" />
-    <meta name="copyright" content="© Copyright 2020 to Present" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link href="../style.css" type="text/css" rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap"
-      rel="stylesheet"
-    />
+    <meta charset="UTF-8"/>
+    <title>Edvin Lindén</title>
+    <meta name="author" content="Edvin Lindén"/>
+    <meta name="description" content="Personal site of Edvin Lindén"/>
+    <meta name="copyright" content="© Copyright 2020 to Present"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;1,300&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet"/>
     <!-- Fathom - beautiful, simple website analytics -->
     <script
       src="https://cdn.usefathom.com/script.js"
@@ -19,189 +19,85 @@
     ></script>
     <!-- / Fathom -->
   </head>
-
   <body>
-    <div class="page-wrap">
+    <main class="page-wrap">
       <div class="header">
-        <h1>The Impossible Safe</h1>
-        <p>
-          <span style="font-size: 1.5em"> Privacy Policy </span>
-        </p>
-      </div>
-      <p>Updated June 30, 2021</p>
-      <p>
-        Edvin Lindén built the The Impossible Safe app(<strong>"The App"</strong
-        >) as an ad supported app. The App is provided by Edvin Lindén at no
-        cost and is intended for use as is.
-      </p>
-      <p>
-        This page is used to inform visitors regarding my policies with the
-        collection, use, and disclosure of Personal Information if anyone
-        decided to use The App.
-      </p>
-      <p>
-        If you choose to use The App, then you agree to the collection and use
-        of information in relation to this policy. The Personal Information that
-        I collect is used for providing and improving The App. I will not use or
-        share your information with anyone except as described in this Privacy
-        Policy.
-      </p>
-      <p>
-        <strong> Information Collection and Use </strong>
-      </p>
-      <p>
-        The app does use third party services that may collect information used
-        to identify you. Links to the privacy policies of the third party
-        service providers used by The App are listed below.
-      </p>
-      <ul>
-        <li>
-          <a
-            href="https://www.apple.com/legal/privacy/en-ww/"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Apple</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://support.google.com/admob/answer/6128543?hl=en"
-            target="_blank"
-            rel="noopener noreferrer"
-            >Google AdMob</a
-          >
-        </li>
-      </ul>
-      <p>
-        <strong> Log Data </strong>
-      </p>
-      <p>
-        I want to inform you that whenever you use The App, in a case of an
-        error in the app I may collect data and information (through third party
-        products) on your phone called Log Data. This Log Data may include
-        information such as your device Internet Protocol (“IP”) address, device
-        name, operating system version, the configuration of the app when
-        utilizing The App, the time and date of your use of The App, and other
-        statistics.
-      </p>
-      <p>
-        <strong> Cookies </strong>
-      </p>
-      <p>
-        Cookies are files with a small amount of data that are commonly used as
-        anonymous unique identifiers. These are sent to your browser from the
-        websites that you visit and are stored on your device's internal memory.
-      </p>
-      <p>
-        The App does not use these “cookies” explicitly. However, the app may
-        use third party code and libraries that use “cookies” to collect
-        information and improve their services. You have the option to either
-        accept or refuse these cookies and know when a cookie is being sent to
-        your device. If you choose to refuse our cookies, you may not be able to
-        use some portions of this The App.
-      </p>
-      <p>
-        <strong> Service Providers </strong>
-      </p>
-      <p>
-        I may employ third-party companies and individuals due to the following
-        reasons:
-      </p>
-      <ul>
-        <li>To facilitate The App;</li>
-        <li>To provide The App on our behalf;</li>
-        <li>To perform Service-related services; or</li>
-        <li>To assist us in analyzing how our The App is used.</li>
-      </ul>
-      <p>
-        I want to inform users of The App that these third parties have access
-        to your Personal Information. The reason is to perform the tasks
-        assigned to them on our behalf. However, they are obligated not to
-        disclose or use the information for any other purpose.
-      </p>
-      <p>
-        <strong> Security </strong>
-      </p>
-      <p>
-        I value your trust in providing us your Personal Information, thus we
-        are striving to use commercially acceptable means of protecting it. But
-        remember that no method of transmission over the internet, or method of
-        electronic storage is 100% secure and reliable, and I cannot guarantee
-        its absolute security.
-      </p>
-      <p>
-        <strong> Links to Other Sites </strong>
-      </p>
-      <p>
-        The App may contain links to other sites. If you click on a third-party
-        link, you will be directed to that site. Note that these external sites
-        are not operated by me. Therefore, I strongly advise you to review the
-        Privacy Policy of these websites. I have no control over and assume no
-        responsibility for the content, privacy policies, or practices of any
-        third-party sites or services.
-      </p>
-      <p>
-        <strong> Children’s Privacy </strong>
-      </p>
-      <p>
-        The App do not address anyone under the age of 13. I do not knowingly
-        collect personally identifiable information from children under 13 years
-        of age. In the case I discover that a child under 13 has provided me
-        with personal information, I immediately delete this information. If you
-        are a parent or guardian and you are aware that your child has provided
-        us with personal information, please contact me so that I will be able
-        to perform necessary actions.
-      </p>
-      <p>
-        <strong> Changes to This Privacy Policy </strong>
-      </p>
-      <p>
-        I may update the Privacy Policy, you are advised to review this page
-        periodically for any changes. I will notify you of any changes by
-        posting the new Privacy Policy on this page.
-      </p>
-      <p>This policy is effective as of 2021-06-30</p>
-      <p><strong>Contact Us</strong></p>
-      <p>
-        If you have any questions about the Privacy Policy, do not hesitate to
-        contact me at edvin@edvinlinden.se.
-      </p>
-      <div class="footer">
-        <div>
-          <p>Edvin Lindén</p>
-          <p class="footer-links">
-            <a
-              href="mailto:hello@edvinlinden.se"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Email</a
-            >
-            <a
-              href="https://www.linkedin.com/in/edvin-linden"
-              target="_blank"
-              rel="noopener noreferrer"
-              >LinkedIn</a
-            >
-            <a
-              href="https://www.instagram.com/edvinlinden"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Instagram</a
-            >
-          </p>
-        </div>
-        <div>
-          <p>
-            This site doesn't use cookies or tracking,
-            <a
-              href="https://usefathom.com/ref/SACEEW"
-              target="_blank"
-              rel="noopener noreferrer"
-              >I use privacy-focused analytics</a
-            >.
-          </p>
-        </div>
-      </div>
-    </div>
-  </body>
+    <a href="/" class="logo">Hi, I'm Edvin!</a>
+    
+</div>
+
+  <h1>The Impossible Safe</h1>
+  <h2>Privacy Policy</h2>
+<p>Updated June 30, 2021</p>
+<p>Edvin Lindén built the The Impossible Safe app(&quot;The App&quot;) as an ad supported app. The App is provided by Edvin Lindén at no cost and is intended for use as is.</p>
+<p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use The App.</p>
+<p>If you choose to use The App, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving The App. I will not use or share your information with anyone except as described in this Privacy Policy.</p>
+<h3>Information Collection and Use</h3>
+<p>The app does use third party services that may collect information used to identify you. Links to the privacy policies of the third party service providers used by The App are listed below.</p>
+<ul>
+<li><a href="https://www.apple.com/legal/privacy/en-ww/">Apple</a></li>
+<li><a href="https://support.google.com/admob/answer/6128543?hl=en">Google AdMob</a></li>
+</ul>
+<h3>Log Data</h3>
+<p>I want to inform you that whenever you use The App, in a case of an error in the app I may collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing The App, the time and date of your use of The App, and other statistics.</p>
+<h3>Cookies</h3>
+<p>Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.</p>
+<p>The App does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this The App.</p>
+<h3>Service Providers</h3>
+<p>I may employ third-party companies and individuals due to the following reasons:</p>
+<ul>
+<li>To facilitate The App;</li>
+<li>To provide The App on our behalf;</li>
+<li>To perform Service-related services; or</li>
+<li>To assist us in analyzing how our The App is used.</li>
+</ul>
+<p>I want to inform users of The App that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
+<h3>Security</h3>
+<p>I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p>
+<h3>Links to Other Sites</h3>
+<p>The App may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
+<h3>Children’s Privacy</h3>
+<p>The App do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this information. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to perform necessary actions.</p>
+<h3>Changes to This Privacy Policy</h3>
+<p>I may update the Privacy Policy, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.</p>
+<p>This policy is effective as of 2021-06-30</p>
+<h3>Contact Us</h3>
+<p>If you have any questions about the Privacy Policy, do not hesitate to contact me at hello@edvinlinden.se.</p>
+
+
+<footer>
+  <div>
+    <p>– Edvin Lindén</p>
+    <p class="footer-links">
+      <a
+        href="mailto:hello@edvinlinden.se"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Email</a
+      >
+      <a
+          href="https://www.linkedin.com/in/edvin-linden"
+          target="_blank"
+          rel="noopener noreferrer"
+          >LinkedIn</a>
+      <a
+        href="https://www.instagram.com/edvinlinden"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Instagram</a>
+    </p>
+  </div>
+  <div>
+    <p>
+      This site doesn't track you,
+      <a
+        href="https://usefathom.com/ref/SACEEW"
+        target="_blank"
+        rel="noopener noreferrer"
+        >I use privacy-focused analytics</a>.
+    </p>
+  </div>
+</footer>
+</main>
+</body>
 </html>
