--- a/the-box-timer/privacy-policy.html
+++ b/the-box-timer/privacy-policy.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>The Box Timer - Privacy Policy</title>
-    <meta name="author" content="Edvin Lindén" />
-    <meta name="copyright" content="© Copyright 2020 to Present" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link href="../style.css" type="text/css" rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap"
-      rel="stylesheet"
-    />
+    <meta charset="UTF-8"/>
+    <title>Edvin Lindén</title>
+    <meta name="author" content="Edvin Lindén"/>
+    <meta name="description" content="Personal site of Edvin Lindén"/>
+    <meta name="copyright" content="© Copyright 2020 to Present"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;1,300&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet"/>
     <!-- Fathom - beautiful, simple website analytics -->
     <script
       src="https://cdn.usefathom.com/script.js"
@@ -20,60 +20,52 @@
     <!-- / Fathom -->
   </head>
   <body>
-    <div class="page-wrap">
+    <main class="page-wrap">
       <div class="header">
-        <h1>The Box Timer</h1>
-        <p>
-          <span style="font-size: 1.5em"> Privacy Policy </span>
-        </p>
-      </div>
-      <p>Updated January 20, 2021</p>
-      <p>
-        The privacy policy of The Box Timer is very simple – I do not collect
-        any personal information about you!
-      </p>
-      <p>
-        I believe that privacy should be protected. The best way to protect it
-        is to share as little as possible. In order for me to operate the app
-        and for you to use it there's no need to share any personal information.
-        It's <i>just</i> a timer after all.
-      </p>
-      <div class="footer">
-        <div>
-          <p>Edvin Lindén</p>
-          <p class="footer-links">
-            <a
-              href="mailto:hello@edvinlinden.se"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Email</a
-            >
-            <a
-              href="https://www.linkedin.com/in/edvin-linden"
-              target="_blank"
-              rel="noopener noreferrer"
-              >LinkedIn</a
-            >
-            <a
-              href="https://www.instagram.com/edvinlinden"
-              target="_blank"
-              rel="noopener noreferrer"
-              >Instagram</a
-            >
-          </p>
-        </div>
-        <div>
-          <p>
-            This site doesn't use cookies or tracking,
-            <a
-              href="https://usefathom.com/ref/SACEEW"
-              target="_blank"
-              rel="noopener noreferrer"
-              >I use privacy-focused analytics</a
-            >.
-          </p>
-        </div>
-      </div>
-    </div>
-  </body>
+    <a href="/" class="logo">Hi, I'm Edvin!</a>
+    
+</div>
+
+  <h1>The Box Timer</h1>
+  <h2>Privacy Policy</h2>
+<p>Updated January 20, 2021</p>
+<p>The privacy policy of The Box Timer is very simple – I do not collect any personal information about you!</p>
+<p>I believe that privacy should be protected. The best way to protect it is to share as little as possible. In order for me to operate the app and for you to use it there's no need to share any personal information. It's <em>just</em> a timer after all.</p>
+
+
+<footer>
+  <div>
+    <p>– Edvin Lindén</p>
+    <p class="footer-links">
+      <a
+        href="mailto:hello@edvinlinden.se"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Email</a
+      >
+      <a
+          href="https://www.linkedin.com/in/edvin-linden"
+          target="_blank"
+          rel="noopener noreferrer"
+          >LinkedIn</a>
+      <a
+        href="https://www.instagram.com/edvinlinden"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Instagram</a>
+    </p>
+  </div>
+  <div>
+    <p>
+      This site doesn't track you,
+      <a
+        href="https://usefathom.com/ref/SACEEW"
+        target="_blank"
+        rel="noopener noreferrer"
+        >I use privacy-focused analytics</a>.
+    </p>
+  </div>
+</footer>
+</main>
+</body>
 </html>
