--- a/the-box-timer/privacy-policy.html
+++ b/the-box-timer/privacy-policy.html
@@ -1,71 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8"/>
-    <title>Edvin Lindén</title>
-    <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="Personal site of Edvin Lindén"/>
-    <meta name="copyright" content="© Copyright 2020 to Present"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;1,300&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
-    <link href="/style.css" rel="stylesheet"/>
-    <!-- Fathom - beautiful, simple website analytics -->
-    <script
-      src="https://cdn.usefathom.com/script.js"
-      data-site="CIYVRBZT"
-      defer
-    ></script>
-    <!-- / Fathom -->
+    <meta
+      http-equiv="refresh"
+      content="3; url='https://edvinlinden.se/the-box-timer/privacy'"
+    />
   </head>
   <body>
-    <main class="page-wrap">
-      <div class="header">
-    <a href="/" class="logo">Hi, I'm Edvin!</a>
-    
-</div>
-
-  <h1>The Box Timer</h1>
-  <h2>Privacy Policy</h2>
-<p>Updated January 20, 2021</p>
-<p>The privacy policy of The Box Timer is very simple – I do not collect any personal information about you!</p>
-<p>I believe that privacy should be protected. The best way to protect it is to share as little as possible. In order for me to operate the app and for you to use it there's no need to share any personal information. It's <em>just</em> a timer after all.</p>
-
-
-<footer>
-  <div>
-    <p>– Edvin Lindén</p>
-    <p class="footer-links">
-      <a
-        href="mailto:hello@edvinlinden.se"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Email</a
-      >
-      <a
-          href="https://www.linkedin.com/in/edvin-linden"
-          target="_blank"
-          rel="noopener noreferrer"
-          >LinkedIn</a>
-      <a
-        href="https://www.instagram.com/edvinlinden"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Instagram</a>
-    </p>
-  </div>
-  <div>
     <p>
-      This site doesn't track you,
-      <a
-        href="https://usefathom.com/ref/SACEEW"
-        target="_blank"
-        rel="noopener noreferrer"
-        >I use privacy-focused analytics</a>.
+      The page has moved if you are not being redirected
+      <a href="https://edvinlinden.se/the-box-timer/privacy">click here</a>.
     </p>
-  </div>
-</footer>
-</main>
-</body>
+  </body>
 </html>
