--- a/404.html
+++ b/404.html
@@ -27,11 +27,8 @@
     
 </div>
 
-  <h1>The Box Timer</h1>
-  <h2>Privacy Policy</h2>
-<p>Updated January 20, 2021</p>
-<p>The privacy policy of The Box Timer is very simple – I do not collect any personal information about you!</p>
-<p>I believe that privacy should be protected. The best way to protect it is to share as little as possible. In order for me to operate the app and for you to use it there's no need to share any personal information. It's <em>just</em> a timer after all.</p>
+  <h1>The page could not be found&#39;</h1>
+  <p>I'm sorry, but you seem to have come to the wrong place.</p>
 
 
 <footer>
