Remove product hunt badge

--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
     
 </div>
 
-  <h1>The page could not be found&#39;</h1>
+  <h1>The page could not be found</h1>
   <p>I'm sorry, but you seem to have come to the wrong place.</p>
 
 
