--- a/writing/index.html
+++ b/writing/index.html
@@ -31,9 +31,13 @@
     </div>
 </div>
 
-  <h1>The page could not be found</h1>
-  <p>I'm sorry, but you seem to have come to the wrong place.</p>
-
+  <h1>Things I&#39;ve written</h1>
+  <ul class="articles"><li>
+            <h2>
+                <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
+            </h2>
+            10 juli 2021
+        </li></ul>
 
 <footer>
   <div>
