--- a/playlists/index.html
+++ b/playlists/index.html
@@ -31,8 +31,15 @@
     </div>
 </div>
 
-  <h1>The page could not be found</h1>
-  <p>I'm sorry, but you seem to have come to the wrong place.</p>
+  <h1>Some of my playlits</h1>
+  <h3>Swedish House Mafia - Dark Forest @ Pacha Ibiza</h3>
+<iframe src="https://open.spotify.com/embed/playlist/44OrA5f1sOIsH7IN9MId4M" width="100%" height="100" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<div style="height: 50px"></div>
+<h3>You wanna party, wzup wzup?!</h3>
+<iframe src="https://open.spotify.com/embed/playlist/1ZO57pWmivreEZq2ihr5Zd" width="100%" height="100" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<div style="height: 50px"></div>
+<h3>Suits</h3>
+<iframe src="https://open.spotify.com/embed/playlist/2xKfbltlNUxGh2iVNRLoYQ" width="100%" height="100" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 
 <footer>
