--- a/the-impossible-safe/privacy.html
+++ b/the-impossible-safe/privacy.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;1,300&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;1,300&family=PT+Serif:ital@1&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
     <link href="/style.css" rel="stylesheet"/>
     <!-- Fathom - beautiful, simple website analytics -->
     <script
@@ -23,8 +23,12 @@
   <body>
     <main class="page-wrap">
       <div class="header">
-    <a href="/" class="logo">Hi, I'm Edvin!</a>
-    
+    <a href="/" class="logo">Edvin Lindén</a>
+    <div class="navigation">
+        
+        <a href="/writing">Writing</a>
+        <a href="/playlists">Playlists</a>
+    </div>
 </div>
 
   <h1>The Impossible Safe</h1>
@@ -68,7 +72,11 @@
 
 <footer>
   <div>
-    <p>– Edvin Lindén</p>
+    <p>Edvin Lindén – <a
+        href="https://usefathom.com/ref/SACEEW"
+        target="_blank"
+        rel="noopener noreferrer"
+        >This site doesn't track you</a>.</p>
     <p class="footer-links">
       <a
         href="mailto:hello@edvinlinden.se"
@@ -86,16 +94,6 @@
         target="_blank"
         rel="noopener noreferrer"
         >Instagram</a>
-    </p>
-  </div>
-  <div>
-    <p>
-      This site doesn't track you,
-      <a
-        href="https://usefathom.com/ref/SACEEW"
-        target="_blank"
-        rel="noopener noreferrer"
-        >I use privacy-focused analytics</a>.
     </p>
   </div>
 </footer>
