Fix title for each page

--- a/writing/what-i-learned-by-launching-my-first-app/index.html
+++ b/writing/what-i-learned-by-launching-my-first-app/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Edvin Lindén</title>
+    <title>What I learned by launching my first app – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="Personal site of Edvin Lindén"/>
+    <meta name="description" content="Edvin Lindén is a Product Manager at Fortnox that spends his time outside work creating things for digital devices."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;1,300&family=PT+Serif:ital@1&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
