--- a/writing/index.html
+++ b/writing/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8"/>
-    <title>Edvin Lindén</title>
+    <title>Writing – Edvin Lindén</title>
     <meta name="author" content="Edvin Lindén"/>
-    <meta name="description" content="Personal site of Edvin Lindén"/>
+    <meta name="description" content="Edvin Lindén is a Product Manager at Fortnox that spends his time outside work creating things for digital devices."/>
     <meta name="copyright" content="© Copyright 2020 to Present"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;1,300&family=PT+Serif:ital@1&family=Open+Sans:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
     </div>
 </div>
 
-  <h1>Things I&#39;ve written</h1>
+  <h1></h1>
   <ul class="articles"><li>
             <h2>
                 <a href="/writing/what-i-learned-by-launching-my-first-app/">What I learned by launching my first app</a>
